Fix: Adds code that corrects issue with part of parquet naming preventing loading to bq

--- a/dsa-airflow/dags/rg_work_test.ipynb
+++ b/dsa-airflow/dags/rg_work_test.ipynb
@@ -2,28 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyspark\n",
     "import pandas as pd\n",
     "from pyspark.sql import SparkSession\n",
     "import pyspark.sql.functions as sf      # sf = spark functions\n",
     "import pyspark.sql.types as st          # st = spark types\n",
-    "\n",
+    "from google.cloud import bigquery\n",
+    "from google.oauth2 import service_account\n",
+    "from google.cloud.exceptions import NotFound\n",
+    "import os\n",
     "\n",
     "sparkql = pyspark.sql.SparkSession.builder.master('local').getOrCreate()\n",
     "\n",
-    "import os\n",
     "data_dir = '../data'\n",
     "\n",
     "file_names = ['ADBE','AMZN', 'CRM', 'CSCO', 'GOOGL', 'IBM','INTC','META','MSFT','NFLX','NVDA','ORCL','TSLA'] #excluded AAPL to start df\n",
@@ -59,35 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../data/all_tech_stocks.parquet/stocks.parquet\n",
-      "../data/all_tech_stocks.parquet/stocks.parquet\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../data/all_tech_stocks.parquet/stocks.parquet'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/74/s3dyx3n926z8q5dgtnrj1yp00000gp/T/ipykernel_93588/1604824501.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m \u001b[0mcreate_stocks_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/74/s3dyx3n926z8q5dgtnrj1yp00000gp/T/ipykernel_93588/1604824501.py\u001b[0m in \u001b[0;36mcreate_stocks_table\u001b[0;34m()\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexists_ok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_FILE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msource_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m         \u001b[0mjob\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_table_from_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtable_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjob_config\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjob_config\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/all_tech_stocks.parquet/stocks.parquet'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from google.cloud import bigquery\n",
-    "from google.oauth2 import service_account\n",
-    "from google.cloud.exceptions import NotFound\n",
-    "\n",
     "PROJECT_NAME = 'team-week-3'\n",
     "DATASET_NAME = 'tech_stocks_world_events'\n",
     "\n",
@@ -106,12 +75,11 @@
     "\n",
     "data_dir = '../data/all_tech_stocks.parquet'\n",
     "\n",
-    "\n",
+    "parq = '.snappy.parquet'\n",
     "for file_name in os.listdir(data_dir):\n",
     "    source = data_dir + file_name\n",
-    "    if '.snappy.parquet' in source:\n",
-    "        source = os.path.join(data_dir,'stocks.parquet')\n",
-    "        print(source)\n",
+    "    if parq in source and '.crc' not in source:\n",
+    "        os.rename(os.path.join(data_dir,file_name),os.path.join(data_dir,'stocks.parquet'))\n",
     "    \n",
     "\n",
     "DATA_FILE = os.path.join(data_dir,'stocks.parquet')\n",
