Add code to rg_work to mirror rg_work_test

--- a/dsa-airflow/dags/rg_work_test.ipynb
+++ b/dsa-airflow/dags/rg_work_test.ipynb
@@ -75,13 +75,14 @@
     "\n",
     "data_dir = '../data/all_tech_stocks.parquet'\n",
     "\n",
+    "#rename the parquet file in order to load to BigQuery\n",
     "parq = '.snappy.parquet'\n",
     "for file_name in os.listdir(data_dir):\n",
     "    source = data_dir + file_name\n",
     "    if parq in source and '.crc' not in source:\n",
     "        os.rename(os.path.join(data_dir,file_name),os.path.join(data_dir,'stocks.parquet'))\n",
     "    \n",
-    "\n",
+    "#filepath to get loaded to BigQuery\n",
     "DATA_FILE = os.path.join(data_dir,'stocks.parquet')\n",
     "\n",
     "TABLE_SCHEMA = [\n",
