--- a/phil_nb.ipynb
+++ b/phil_nb.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-02-14 16:25:48,475][2275407497:0051] : Creating bigquery client\n",
-      "[INFO ][2023-02-14 16:25:48,475][2275407497:0053] : Setup Completed\n"
+      "[DEBUG][2023-02-15 00:03:39,373][1885403928:0067] : Creating bigquery client\n",
+      "[INFO ][2023-02-15 00:03:39,384][1885403928:0069] : Setup Completed\n"
      ]
     }
    ],
@@ -48,8 +48,24 @@
     "        'table_name': 'tornadoes',\n",
     "        'schema': [\n",
     "            # indexes are written if only named in the schema\n",
-    "            bigquery.SchemaField('incident_number', 'string', mode='REQUIRED'),\n",
-    "            \n",
+    "            bigquery.SchemaField('date', 'datetime64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('tornado_number', 'int64', mode='REQUIRED'),\n",
+    "            bigquery.SchemaField('year', 'int64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('month', 'int64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('day', 'int64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('timezone', 'int64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('state', 'string', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('magnitude', 'int64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('injuries', 'int64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('fatalities', 'int64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('property_loss', 'float64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('crop_loss', 'float64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('starting_lat', 'float64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('starting_lon', 'float64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('end_lat', 'float64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('end_lon', 'float64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('length', 'float64', mode='NULLABLE'),\n",
+    "            bigquery.SchemaField('width', 'int64', mode='NULLABLE'),\n",
     "        ]\n",
     "    }\n",
     "}\n",
@@ -72,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-02-14 16:30:35,824][3726965278:0016] : loaded 68868 rows from ./data/tornadoes.csv\n"
+      "[INFO ][2023-02-15 00:04:01,360][3726965278:0016] : loaded 68868 rows from ./data/tornadoes.csv\n"
      ]
     },
     {
@@ -463,14 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-02-14 16:30:48,353][2866547761:0017] : Dropped columns.\n"
+      "[INFO ][2023-02-15 00:04:06,060][2866547761:0017] : Dropped columns.\n"
      ]
     },
     {
@@ -640,7 +656,7 @@
        "4  32.42  -89.13   0.00    0.0   2.0   37  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,14 +685,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-02-14 22:23:41,479][2164801676:0025] : Renamed columns.\n"
+      "[INFO ][2023-02-15 00:04:09,293][2164801676:0025] : Renamed columns.\n"
      ]
     },
     {
@@ -853,7 +869,7 @@
        "4        -89.13     0.00      0.0     2.0     37  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +933,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +971,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -995,12 +1011,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>date</th>\n",
        "      <th>tornado_number</th>\n",
        "      <th>year</th>\n",
        "      <th>month</th>\n",
        "      <th>day</th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
        "      <th>timezone</th>\n",
        "      <th>state</th>\n",
        "      <th>magnitude</th>\n",
@@ -1019,12 +1034,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1950-10-01 21:00:00</td>\n",
        "      <td>192</td>\n",
        "      <td>1950</td>\n",
        "      <td>10</td>\n",
        "      <td>1</td>\n",
-       "      <td>1950-10-01</td>\n",
-       "      <td>2023-02-14 21:00:00</td>\n",
        "      <td>3</td>\n",
        "      <td>OK</td>\n",
        "      <td>1</td>\n",
@@ -1041,12 +1055,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1950-10-09 02:15:00</td>\n",
        "      <td>193</td>\n",
        "      <td>1950</td>\n",
        "      <td>10</td>\n",
        "      <td>9</td>\n",
-       "      <td>1950-10-09</td>\n",
-       "      <td>2023-02-14 02:15:00</td>\n",
        "      <td>3</td>\n",
        "      <td>NC</td>\n",
        "      <td>3</td>\n",
@@ -1063,12 +1076,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1950-11-20 02:20:00</td>\n",
        "      <td>195</td>\n",
        "      <td>1950</td>\n",
        "      <td>11</td>\n",
        "      <td>20</td>\n",
-       "      <td>1950-11-20</td>\n",
-       "      <td>2023-02-14 02:20:00</td>\n",
        "      <td>3</td>\n",
        "      <td>KY</td>\n",
        "      <td>2</td>\n",
@@ -1085,12 +1097,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1950-11-20 04:00:00</td>\n",
        "      <td>196</td>\n",
        "      <td>1950</td>\n",
        "      <td>11</td>\n",
        "      <td>20</td>\n",
-       "      <td>1950-11-20</td>\n",
-       "      <td>2023-02-14 04:00:00</td>\n",
        "      <td>3</td>\n",
        "      <td>KY</td>\n",
        "      <td>1</td>\n",
@@ -1107,12 +1118,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1950-11-20 07:30:00</td>\n",
        "      <td>197</td>\n",
        "      <td>1950</td>\n",
        "      <td>11</td>\n",
        "      <td>20</td>\n",
-       "      <td>1950-11-20</td>\n",
-       "      <td>2023-02-14 07:30:00</td>\n",
        "      <td>3</td>\n",
        "      <td>MS</td>\n",
        "      <td>1</td>\n",
@@ -1132,29 +1142,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   tornado_number  year  month  day       date                time  timezone  \\\n",
-       "0             192  1950     10    1 1950-10-01 2023-02-14 21:00:00         3   \n",
-       "1             193  1950     10    9 1950-10-09 2023-02-14 02:15:00         3   \n",
-       "2             195  1950     11   20 1950-11-20 2023-02-14 02:20:00         3   \n",
-       "3             196  1950     11   20 1950-11-20 2023-02-14 04:00:00         3   \n",
-       "4             197  1950     11   20 1950-11-20 2023-02-14 07:30:00         3   \n",
+       "                 date  tornado_number  year  month  day  timezone state  \\\n",
+       "0 1950-10-01 21:00:00             192  1950     10    1         3    OK   \n",
+       "1 1950-10-09 02:15:00             193  1950     10    9         3    NC   \n",
+       "2 1950-11-20 02:20:00             195  1950     11   20         3    KY   \n",
+       "3 1950-11-20 04:00:00             196  1950     11   20         3    KY   \n",
+       "4 1950-11-20 07:30:00             197  1950     11   20         3    MS   \n",
        "\n",
-       "  state  magnitude  injuries  fatalities  property_loss  crop_loss  \\\n",
-       "0    OK          1         0           0            4.0        0.0   \n",
-       "1    NC          3         3           0            5.0        0.0   \n",
-       "2    KY          2         0           0            5.0        0.0   \n",
-       "3    KY          1         0           0            5.0        0.0   \n",
-       "4    MS          1         3           0            4.0        0.0   \n",
+       "   magnitude  injuries  fatalities  property_loss  crop_loss  starting_lat  \\\n",
+       "0          1         0           0            4.0        0.0         36.73   \n",
+       "1          3         3           0            5.0        0.0         34.17   \n",
+       "2          2         0           0            5.0        0.0         37.37   \n",
+       "3          1         0           0            5.0        0.0         38.20   \n",
+       "4          1         3           0            4.0        0.0         32.42   \n",
        "\n",
-       "   starting_lat  starting_lon  end_lat  end_lon  length  width  \n",
-       "0         36.73       -102.52    36.88   -102.3    15.8     10  \n",
-       "1         34.17        -78.60     0.00      0.0     2.0    880  \n",
-       "2         37.37        -87.20     0.00      0.0     0.1     10  \n",
-       "3         38.20        -84.50     0.00      0.0     0.1     10  \n",
-       "4         32.42        -89.13     0.00      0.0     2.0     37  "
+       "   starting_lon  end_lat  end_lon  length  width  \n",
+       "0       -102.52    36.88   -102.3    15.8     10  \n",
+       "1        -78.60     0.00      0.0     2.0    880  \n",
+       "2        -87.20     0.00      0.0     0.1     10  \n",
+       "3        -84.50     0.00      0.0     0.1     10  \n",
+       "4        -89.13     0.00      0.0     2.0     37  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
