create loab table function.

--- a/phil_nb.ipynb
+++ b/phil_nb.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-02-15 00:03:39,373][1885403928:0067] : Creating bigquery client\n",
-      "[INFO ][2023-02-15 00:03:39,384][1885403928:0069] : Setup Completed\n"
+      "[DEBUG][2023-02-15 00:20:45,584][1586834467:0069] : Creating bigquery client\n",
+      "[INFO ][2023-02-15 00:20:45,610][1586834467:0071] : Setup Completed\n"
      ]
     }
    ],
@@ -19,6 +19,8 @@
     "import sys\n",
     "import pandas as pd\n",
     "import logging\n",
+    "from hashlib import md5\n",
+    "from typing import List\n",
     "from google.cloud import bigquery\n",
     "from google.cloud import bigquery\n",
     "from google.oauth2 import service_account\n",
@@ -88,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-02-15 00:04:01,360][3726965278:0016] : loaded 68868 rows from ./data/tornadoes.csv\n"
+      "[INFO ][2023-02-15 00:20:47,224][3726965278:0016] : loaded 68868 rows from ./data/tornadoes.csv\n"
      ]
     },
     {
@@ -479,14 +481,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-02-15 00:04:06,060][2866547761:0017] : Dropped columns.\n"
+      "[INFO ][2023-02-15 00:20:47,499][2866547761:0017] : Dropped columns.\n"
      ]
     },
     {
@@ -656,7 +658,7 @@
        "4  32.42  -89.13   0.00    0.0   2.0   37  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,14 +687,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-02-15 00:04:09,293][2164801676:0025] : Renamed columns.\n"
+      "[INFO ][2023-02-15 00:20:47,712][2164801676:0025] : Renamed columns.\n"
      ]
     },
     {
@@ -869,7 +871,7 @@
        "4        -89.13     0.00      0.0     2.0     37  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +935,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +973,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1164,13 +1166,55 @@
        "4        -89.13     0.00      0.0     2.0     37  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_table(\n",
+    "    df: pd.DataFrame, \n",
+    "    client: bigquery.Client, \n",
+    "    table_name: str, \n",
+    "    schema: List[bigquery.SchemaField], \n",
+    "    create_disposition: str = 'CREATE_IF_NEEDED', \n",
+    "    write_disposition: str = 'WRITE_TRUNCATE'\n",
+    "    ) -> None:\n",
+    "    \"\"\"load dataframe into bigquery table\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): dataframe to load\n",
+    "        client (bigquery.Client): bigquery client\n",
+    "        table_name (str): full table name including project and dataset id\n",
+    "        schema (List[bigquery.SchemaField]): table schema with data types\n",
+    "        create_disposition (str, optional): create table disposition. Defaults to 'CREATE_IF_NEEDED'.\n",
+    "        write_disposition (str, optional): overwrite table disposition. Defaults to 'WRITE_TRUNCATE'.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # test table name to be full table name including project and dataset name. It must contain to dots\n",
+    "    assert len(table_name.split('.')) == 3, f\"Table name must be a full bigquery table name including project and dataset id: '{table_name}'\"\n",
+    "    # setup bigquery load job:\n",
+    "    # create table if needed, replace rows, define the table schema\n",
+    "    job_config = bigquery.LoadJobConfig(\n",
+    "        create_disposition=create_disposition,\n",
+    "        write_disposition=write_disposition,\n",
+    "        schema=schema\n",
+    "    )\n",
+    "    logger.info(f\"loading table: '{table_name}'\")\n",
+    "    job = client.load_table_from_dataframe(df, destination=table_name, job_config=job_config)\n",
+    "    job.result()        # wait for the job to finish\n",
+    "    # get the resulting table\n",
+    "    table = client.get_table(table_name)\n",
+    "    logger.info(f\"loaded {table.num_rows} rows into {table.full_table_id}\")"
    ]
   },
   {
